2000-05-26  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* tools/dump-cm.c: changed dump driver calling conventions
	from Juergen. dump-cm patch from Andreas.

2000-05-25  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* libsmi-0.2.1.tar.gz: released version 0.2.1.

2000-05-20  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* tools/dump-metrics.c: New output format supplied by Juergen.
	It prints metrics of MIB modules.

2000-05-18  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* tools/dump-smi.c (printNotifications): fixed determination of
	the ENTERPRISE object. Thanks to Ira Wolf.

	* tools/dump-smi.c (getOidString): fixed printing of OIDs with
	a length of 2. Thanks to Ira Wolf.

	* test/Makefile.am: removed GNU specific diff options
	from check scripts.

2000-05-17  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* lib/data.c (setObjectName): fixed crashes on unresolved
	labels. Thanks to Bill Fenner.

	* win/: applied patches from Erik.

2000-05-16  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* lib/data.c (loadModule): added checks for missing imported
	modules.

	* configure.in: fixed mibdir default. Thanks to Saurabh.

	* lib/data.c (setObjectName): fixed bug in case of multiple
	definitions for the same OID in multiple modules.

	* tools/dump-jax.c: Patch from Juergen: made file creation more
	generic.

2000-05-15  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* tools/dump-jax.c (dumpEntry): changed *EntryImpl classes to
	use the super() method.

2000-05-02  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* tools/smidump.c: Patch from Juergen: flags can now be passed
	to the dump modules.

2000-04-12  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* lib/parser-smi.y: fixed seg-faults on various imported but
	not found definitions. Based on a patch contributed by
	Bill Fenner.

2000-04-11  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* tools/dump-smi.c: fixed trailing comma in SMIv1 SEQUENCEs.
	Reported by Ira Wolf.

	* tools/smistrip.in: fixed bug reported by Ira Wolf: now we do not